# pugixml

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  CNAME  Gemfile  Jamfile.jam  Jamrules.jam  LICENSE  LICENSE.md  MODULE.bazel  Makefile  Notepad++.lnk  README.md  SECURITY.md  _config.yml  appveyor.yml  benchmark-data.js  benchmark-hexml.html  benchmark.md  docs  index.html  index.md  license.md  meson.build  meson_options.txt  news.md  params.json  readme.txt  testdocs
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  cifuzz.yml
Lua/lib/: lua  pugilua.lib  test.bat  test.lua  tutorial.xml
_includes/: footer.html  header.html
_layouts/: post.html
_posts/: 2010-07-11-pugixml-0.9-release.md  2010-10-14-new-project-site.md  2010-10-31-pugixml-1.0-release.md  2012-05-01-pugixml-1.2-release.md  2014-02-28-pugixml-1.4-release.md  2014-10-26-pugixml-moves-to-github.md  2014-11-27-pugixml-1.5-release.md  2015-04-10-pugixml-1.6-release.md  2015-10-19-pugixml-1.7-release.md  2016-11-24-pugixml-1.8-release.md  2018-04-04-pugixml-1.9-release.md  2019-09-15-pugixml-1.10-release.md  2020-11-26-pugixml-1.11-release.md  2022-02-09-pugixml-1.12-release.md  2022-11-02-pugixml-1.13-release.md  2023-10-01-pugixml-1.14-release.md  2025-01-10-pugixml-1.15-release.md
contrib/: foreach.hpp  header-only.hpp
contrib/natvis/: pugixml.natvis  pugixml_wide.natvis
contrib/pugilua/: pugilua.cpp  pugilua_lib.cpp  pugilua_lib.h
docs/: changes.txt  config.adoc  index.html  manual.adoc  manual.html  manual.qbk  manual.xsl  pugixml.cfg  pugixml.css  quickstart.adoc  quickstart.html  quickstart.qbk  quickstart.xsl
docs/html/: annotated.html  classpugi_1_1xml__attribute-members.html  classpugi_1_1xml__attribute.html  classpugi_1_1xml__attribute__coll__graph.md5  classpugi_1_1xml__attribute__iterator-members.html  classpugi_1_1xml__attribute__iterator.html  classpugi_1_1xml__attribute__iterator__coll__graph.map  classpugi_1_1xml__attribute__iterator__coll__graph.md5  classpugi_1_1xml__attribute__iterator__inherit__graph.md5  classpugi_1_1xml__document-members.html  classpugi_1_1xml__document.html  classpugi_1_1xml__document__coll__graph.map  classpugi_1_1xml__document__coll__graph.md5  classpugi_1_1xml__document__inherit__graph.map  classpugi_1_1xml__document__inherit__graph.md5  classpugi_1_1xml__node-members.html  classpugi_1_1xml__node.html  classpugi_1_1xml__node__coll__graph.md5  classpugi_1_1xml__node__inherit__graph.map  classpugi_1_1xml__node__inherit__graph.md5  classpugi_1_1xml__node__iterator-members.html  classpugi_1_1xml__node__iterator.html  classpugi_1_1xml__node__iterator__coll__graph.map  classpugi_1_1xml__node__iterator__coll__graph.md5  classpugi_1_1xml__node__iterator__inherit__graph.md5  classpugi_1_1xml__tree__walker-members.html  classpugi_1_1xml__tree__walker.html  classpugi_1_1xml__tree__walker__coll__graph.md5  classpugi_1_1xml__writer-members.html  classpugi_1_1xml__writer.html  classpugi_1_1xml__writer__file-members.html  classpugi_1_1xml__writer__file.html  classpugi_1_1xml__writer__file__coll__graph.map  classpugi_1_1xml__writer__file__coll__graph.md5  classpugi_1_1xml__writer__file__inherit__graph.map  classpugi_1_1xml__writer__file__inherit__graph.md5  classpugi_1_1xml__writer__inherit__graph.map  classpugi_1_1xml__writer__inherit__graph.md5  (+64 more)
feed/: index.xml
msvc/: .gitignore  pugixml.props  pugixml.s.props  pugixml_vs2010.sln  pugixml_vs2010.vcxproj  pugixml_vs2010_static.vcxproj  pugixml_vs2012.sln  pugixml_vs2012.vcxproj  pugixml_vs2012_static.vcxproj  pugixml_vs2013.sln  pugixml_vs2013.vcxproj  pugixml_vs2013_static.vcxproj  pugixml_vs2015.sln  pugixml_vs2015.vcxproj  pugixml_vs2015_static.vcxproj  readme.txt
scripts/: CMakeLists.txt  archive.py  build_nuget_package.bat  nuget.autopkg  nuget_build.bat  nuget_build.ps1  premake4.lua  pugixml-config.cmake.in  pugixml.pc.in  pugixml.podspec  pugixml_airplay.mkf  pugixml_codeblocks.cbp  pugixml_codelite.project  pugixml_dll.rc  pugixml_vs2002.vcproj  pugixml_vs2003.vcproj  pugixml_vs2005.vcproj  pugixml_vs2005_static.vcproj  pugixml_vs2008.vcproj  pugixml_vs2008_static.vcproj  pugixml_vs2010.vcxproj  pugixml_vs2010_static.vcxproj  pugixml_vs2013.vcxproj  pugixml_vs2013_static.vcxproj  pugixml_vs2015.vcxproj  pugixml_vs2015_static.vcxproj  pugixml_vs2017.vcxproj  pugixml_vs2017_static.vcxproj  pugixml_vs2019.vcxproj  pugixml_vs2019_static.vcxproj  pugixml_vs2022.vcxproj  pugixml_vs2022_static.vcxproj  pugixml_vs2026.vcxproj  pugixml_vs2026_static.vcxproj  sbom.cdx.json
scripts/nuget/: pugixml.nuspec
scripts/pugilua/: make_vs2008.bat  make_vs2010.bat  premake4  premake4.lua  pugilua.sln  pugilua.vcxproj  pugilua.vcxproj.filters  start_lua.bat  start_lua.sh
scripts/pugixml.xcodeproj/: project.pbxproj
scripts/vs2015/: vs2015.sln
scripts/vs2015/libpugixml/: ReadMe.txt  libpugixml.vcxproj  libpugixml.vcxproj.filters
scripts/vs2015/test/: test.vcxproj  test.vcxproj.filters
src/: pugiconfig.hpp  pugiutf.hpp  pugixml.cpp  pugixml.cppm  pugixml.hpp  pugixpath.cpp
stylesheets/: styles.css
tests/: Makefile.travis  allocator.cpp  allocator.hpp  archive.pl  archive.py  autotest-appveyor.ps1  autotest-linux.sh  autotest-local.pl  autotest-remote-host.pl  autotest-remote-server.pl  autotest-report.pl  autotest.pl  cmake-appveyor.ps1  common.hpp  fuzz_parse.cpp  fuzz_parse.dict  fuzz_setup.sh  fuzz_xpath.cpp  fuzz_xpath.dict  gcov-filter.pl  gitsvn.sh  helpers.hpp  main.cpp  meson.build  test.cpp  test.hpp  test_compact.cpp  test_control_chars.cpp  test_deprecated.cpp  test_document.cpp  test_dom_modify.cpp  test_dom_text.cpp  test_dom_traverse.cpp  test_header_guard.cpp  test_header_iosfwd_1.cpp  test_header_iosfwd_2.cpp  test_header_iostream_1.cpp  test_header_iostream_2.cpp  test_header_only.cpp  test_header_only_1.cpp  (+27 more)
tests/data/: multiline.xml  truncation.xml  utftest_utf8.xml  utftest_utf8_bom.xml  utftest_utf8_nodecl.xml
tests/data_fuzz_xpath/: basic.xpath  functions.xpath  math.xpath  path.xpath  predicate.xpath
(+55 files in other folders)
