test_sources = files(
    'allocator.cpp',
    'main.cpp',
    'test_compact.cpp',
    'test.cpp',
    'test_deprecated.cpp',
    'test_document.cpp',
    'test_dom_modify.cpp',
    'test_dom_text.cpp',
    'test_dom_traverse.cpp',
    'test_header_guard.cpp',
    'test_header_iosfwd_1.cpp',
    'test_header_iosfwd_2.cpp',
    'test_header_iostream_1.cpp',
    'test_header_iostream_2.cpp',
    'test_header_only_1.cpp',
    'test_header_only_2.cpp',
    'test_header_string_1.cpp',
    'test_header_string_2.cpp',
    'test_header_string_iostream.cpp',
    'test_memory.cpp',
    'test_parse.cpp',
    'test_parse_doctype.cpp',
    'test_unicode.cpp',
    'test_version.cpp',
    'test_write.cpp',
    'test_xpath_api.cpp',
    'test_xpath.cpp',
    'test_xpath_functions.cpp',
    'test_xpath_operators.cpp',
    'test_xpath_parse.cpp',
    'test_xpath_paths_abbrev_w3c.cpp',
    'test_xpath_paths.cpp',
    'test_xpath_paths_w3c.cpp',
    'test_xpath_variables.cpp',
    'test_xpath_xalan_1.cpp',
    'test_xpath_xalan_2.cpp',
    'test_xpath_xalan_3.cpp',
    'test_xpath_xalan_4.cpp',
    'test_xpath_xalan_5.cpp',
    'writer_string.cpp',
)
